# PyPI-foxange

./: README.md  pyproject.toml
foxange/: pyproject.toml
foxange/src/foxange/: file.py  input.py  list_proce.py  test.txt
foxange/tests/: files.txt
src/foxange/: __init__.py  file.py  input.py  list_proce.py  math.py
src/foxange.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
