[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foxange"
version = "0.1.0"
description = "A custom Python module collection"
authors = [
    { name = "foxange", email = "slcfox@foxmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# 如果你的包没有外部依赖，则留空或删除这一节
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]          # 在 src 目录下查找包
include = ["foxange*"]   # 打包 foxange 包及其子包（如果有）